# apps/auth-service/src/routes/auth.router.ts
@@ -3,16 +3,23 @@ import {
   loginUser,
   resetUserPassword,
   userForgotPassword,
-  userRegisteration,
+  userRegistration,
   verifyUser,
   verifyUserForgotPassword,
+  refreshToken,
+  getUser,
 } from '../controller/auth.controller';
+
+//middleware
+import isAuthenticated from '@packages/middleware/isAuthenticated';
 
 const router: Router = express.Router();
 
-router.post('/user-registeration', userRegisteration);
+router.post('/user-registration', userRegistration);
 router.post('/verify-user', verifyUser);
 router.post('/login-user', loginUser);
+router.post('/refresh-token-user', refreshToken);
+router.get('/logged-in-user', isAuthenticated, getUser);
 router.post('/forgot-password-user', userForgotPassword);
 router.post('/reset-password-user', resetUserPassword);
 router.post('/verify-forgot-password-user', verifyUserForgotPassword);
