# apps/auth-service/src/swagger-output.json
@@ -7,12 +7,12 @@
     "description": ""
   },
   "host": "localhost:6001",
-  "basePath": "/api",
+  "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
-    "/user-registeration": {
+    "/api/user-registration": {
       "post": {
         "description": "",
         "parameters": [
@@ -22,14 +22,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
-                  "example": "edris.emperator@gmail.com"
-                },
-                "password": {
-                  "example": "12345678"
-                },
                 "name": {
-                  "example": "edris"
+                  "example": "my name"
+                },
+                "email": {
+                  "example": "edris@gmail.com"
+                },
+                 "password": {
+                  "example": "12345678"
                 }
               }
             }
@@ -42,7 +42,7 @@
         }
       }
     },
-    "/verify-user": {
+    "/api/verify-user": {
       "post": {
         "description": "",
         "parameters": [
@@ -53,16 +53,16 @@
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "edris.emperator@gmail.com"
+                  "example": "any"
                 },
                 "otp": {
                   "example": "any"
                 },
                 "password": {
-                  "example": "12345678"
+                  "example": "any"
                 },
                 "name": {
-                  "example": "edris"
+                  "example": "any"
                 }
               }
             }
@@ -75,7 +75,7 @@
         }
       }
     },
-    "/login-user": {
+    "/api/login-user": {
       "post": {
         "description": "",
         "parameters": [
@@ -98,6 +98,53 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/forgot-password-user": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/reset-password-user": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "newPassword": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/verify-forgot-password-user": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
